Code changes for retry